--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,9 +24,6 @@
 
     <header class="page-header" role="banner" style="padding: 1rem;">
       <h1 class="">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
     </header>
 
     <main id="content" class="main-content" role="main">
@@ -34,7 +31,7 @@
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> разрабатывается <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
+          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">Страница проекта {{ site.github.repository_name }} на Гитхабе</a>.</span>
         {% endif %}
       </footer>
     </main>
