--- a/_layouts/page.material.html
+++ b/_layouts/page.material.html
@@ -48,7 +48,7 @@
       <div class="footer-copyright">
         <div class="container">
           {% if site.github.is_project_page %}
-            <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">Страница проекта {{ site.github.repository_name }} на Гитхабе</a>.</span>
+            <a href="{{ site.github.repository_url }}">Страница</a> проекта {{ site.github.repository_name }} на Гитхабе.
           {% else %}
             © Local Copyright Text
           {% endif %}
